[build-system]
requires = ["setuptools>=56", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pywrapid"
description = "Collection of wrapper libraries for rapid development of python applications"
readme = "README.rst"
requires-python = ">=3.6"
license = { file = "LICENSE" }
keywords = ["web client", "requests", "config", "yaml config", "wrapper"]
authors = [
  { name = "Jonas Werme", email = "jonas.werme@nsahq.se" },
  { name = "Marcus Wallgren", email = "marcus.wallgren@nsahq.se" },
]
maintainers = [
  { name = "Jonas Werme", email = "jonas.werme@nsahq.se" },
  { name = "Marcus Wallgren", email = "marcus.wallgren@nsahq.se" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = ["requests", "pyyaml", "pyjwt"]

[project.optional-dependencies]
tests = [
  "pytest[all]",
  "pytest-cov[all]",
  "tox[all]",
  "responses[all]",
  "coverage[all]",
  "black[all]",
  "isort[all]",
  "flake8[all]",
  "mypy[all]",
  "pylint[all]",
]
docs = [
  "sphinx[all]",
  "sphinx_autodoc_typehints[all]",
  "sphinxcontrib-confluencebuilder[all]",
  "sphinx_rtd_theme[all]",
]

[project.urls]
homepage = "https://github.com/nsahq"
documentation = "https://pywrapid.readthedocs.io/en/latest/"
repository = "https://github.com/nsahq/pywrapid"
changelog = "https://github.com/nsahq/pywrapid"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

[pytest.enabler.mypy]
addopts = "--mypy"

[pytest.enabler.cov]
addopts = "--cov"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.black]
line-length = 99
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | config
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_first_party = "pywrapid"

[tool.mypy]
files = "src/"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 100
disable = """
    W0511,
    W3101
"""
